# cppTensorflow

./: CMakeLists.txt  README.md
include/: model_loader.h  model_loader_base.h
src/: main.cpp  model_loader.cpp
